--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,11 @@
     <string name="app_name">GooTool</string>
     <string name="app_label">World Of Goo Mod Manager</string>
     <string name="action_about">About</string>
-    <string name="action_danate">Donate</string>
+    <string name="action_donate">Donate</string>
     <string name="action_settings">Settings</string>
     <string name="btn_remove">Remove</string>
     <string name="btn_delete">Delete selected</string>
+    <string name="btn_add">Add</string>
     <string name="add">Select a mod File to add</string>
     <string name="managernotfound">Please install a File Manager.</string>
     <string name="deleted">Deleted selected goomods. Don\'t forget to save changes.</string>
@@ -19,7 +20,6 @@
     <string name="crash">Sorry,the application crash has stoped unexpectedly.</string>
     <string name="generating">Generating modded APK (progress bar not implemented yet)</string>
     <string name="signing">Signing modded APK</string>
-    <string name="title_activity_settings">Settings</string>
 
     <!-- Strings related to Settings -->
 
@@ -92,6 +92,13 @@
     <string name="pref_ringtone_silent">Silent</string>
 
     <string name="pref_title_vibrate">Vibrate</string>
-    <string name="title_activity_donate">\@steing_donate</string>
-    <string name="title_activity_about">\@string_about</string>
+    <string name="title_activity_navigation">NavigationActivity</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_subtitle">GooTool for Android.</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="btn_save">Save</string>
+    <string name="btn_install">Install</string>
+    <string name="btn_changeorder">Change Order</string>
+    <string name="btn_done">Done</string>
 </resources>
