Rewrite Change Order button.
Rewrite Change Order button.
Add Done switch for Change Order button.
Backport sdk version for Ice Cream Sandwich API level 14, NDK 7.
Test layout,may have bugs.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -101,4 +101,5 @@
     <string name="btn_install">Install</string>
     <string name="btn_changeorder">Change Order</string>
     <string name="btn_done">Done</string>
+    <string name="app_version">Version:</string>
 </resources>
