--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -24,4 +24,5 @@
     <string name="btn_changeorder">更改顺序</string>
     <string name="btn_done">完成</string>
     <string name="btn_add">添加</string>
+    <string name="app_version">版本：</string>
 </resources>
