--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,13 +2,15 @@
 <resources>
     <string name="app_name">GooTool</string>
     <string name="app_label">World Of Goo Mod Manager</string>
-    <string name="app_osl">Open Source Licence</string>
-    <string name="app_osl_notfound">File not found.</string>
+    <string name="app_osl">Open Source Licences</string>
     <string name="action_about">About</string>
     <string name="action_donate">Donate</string>
     <string name="action_settings">Settings</string>
     <string name="btn_remove">Remove</string>
     <string name="btn_delete">Delete selected</string>
+    <string name="about_source_label">Source</string>
+    <string name="about_changes_label">Changes Log</string>
+    <string name="nav_modlist">Mod List</string>
     <string name="btn_add">Add</string>
     <string name="add">Select a mod File to add</string>
     <string name="managernotfound">Please install a File Manager.</string>
