--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,7 +31,7 @@
     <string name="signing">Signing modded APK</string>
     <string name="grantpermissions_1">GooTool need your permission granted to use the Storage, otherwise will not be able to continue to use.</string>
     <string name="grantpermissions_2">To continue to use GooTool you must permissions granted to use the Storage, please click on the [Grant] and give corresponding privileges in a pop-up window.</string>
-    <string name="grantpermissions_3">GooTool need you granted permission to continue to use the Storage, please go to [Settings - Apps - World of Goo Module Manager - Permissions] to open the corresponding permissions.</string>
+    <string name="grantpermissions_3">GooTool need you granted permission to continue to use the Storage, please go to [Settings - Applications - World of Goo Module Manager - Permissions] to open the corresponding permissions.</string>
     <string name="grantpermissions_btn_1">Cancel</string>
     <string name="grantpermissions_btn_2">Continue</string>
     <string name="title_activity_navigation">NavigationActivity</string>
@@ -44,76 +44,7 @@
     <string name="btn_changeorder">Change Order</string>
     <string name="btn_done">Done</string>
     <string name="app_version_desc">Version:</string>
-
-    <!-- Strings related to Settings -->
-
-    <!-- Example General settings -->
-    <string name="pref_header_general">General</string>
-
-    <string name="pref_title_social_recommendations">Enable social recommendations</string>
-    <string name="pref_description_social_recommendations">Recommendations for people to contact
-        based on your message history
-    </string>
-
-    <string name="pref_title_display_name">Display name</string>
-    <string name="pref_default_display_name">John Smith</string>
-
-    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
-    <string-array name="pref_example_list_titles">
-        <item>Always</item>
-        <item>When possible</item>
-        <item>Never</item>
-    </string-array>
-    <string-array name="pref_example_list_values">
-        <item>1</item>
-        <item>0</item>
-        <item>-1</item>
-    </string-array>
-
-    <!-- Example settings for Data & Sync -->
-    <string name="pref_header_data_sync">Data &amp; sync</string>
-
-    <string name="pref_title_sync_frequency">Sync frequency</string>
-    <string-array name="pref_sync_frequency_titles">
-        <item>15 minutes</item>
-        <item>30 minutes</item>
-        <item>1 hour</item>
-        <item>3 hours</item>
-        <item>6 hours</item>
-        <item>Never</item>
-    </string-array>
-    <string-array name="pref_sync_frequency_values">
-        <item>15</item>
-        <item>30</item>
-        <item>60</item>
-        <item>180</item>
-        <item>360</item>
-        <item>-1</item>
-    </string-array>
-
-    <string-array name="list_preference_entries">
-        <item>Entry 1</item>
-        <item>Entry 2</item>
-        <item>Entry 3</item>
-    </string-array>
-
-    <string-array name="list_preference_entry_values">
-        <item>1</item>
-        <item>2</item>
-        <item>3</item>
-    </string-array>
-
-    <string-array name="multi_select_list_preference_default_value" />
-
-    <string name="pref_title_system_sync_settings">System sync settings</string>
-
-    <!-- Example settings for Notifications -->
-    <string name="pref_header_notifications">Notifications</string>
-
-    <string name="pref_title_new_message_notifications">New message notifications</string>
-
-    <string name="pref_title_ringtone">Ringtone</string>
-    <string name="pref_ringtone_silent">Silent</string>
-
-    <string name="pref_title_vibrate">Vibrate</string>
+    <string name="CopyButton">Copy to Clipboard</string>
+    <string name="btn_delete_temp">Remove temporary file</string>
+    <string name="delete_temp_desc">Temporary file will be created when GooTool start.Used to build game install package.You can remove it safety.</string>
 </resources>
